# DocWise

./: .env  pyproject.toml
data/collections/oh my push/: 134.md
data/collections/oh my push3/: 1.md  10.md  100.md  101.md  102.md  103.md  104.md  105.md  106.md  107.md  108.md  109.md  11.md  110.md  111.md  112.md  113.md  114.md  115.md  116.md  117.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  (+75 more)
docwise/: app.py
docwise/presentation/: chat.py  scraping.py
docwise/service/: rag.py  scraping.py
