[project]
name = "docwise"
version = "0.1.0"
description = ""
authors = [
    {name = "pb"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "firecrawl (>=2.15.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
